...
    <string name="about">About</string>
    <string name="choose_site">choose site</string>
    <string name="add_site">Add site</string>
    <string name="street">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code (5 digits) :</string>
    <string name="create_site">Create site</string>
    <string name="site_info">Site info</string>
    <string name="modify_site">Edit site</string>
    <string name="modify_auditor">Edit auditor</string>
    <string name="create_auditor">Create auditor</string>
    <string name="name">Name :</string>
    <string name="last_name">Last name :</string>
    <string name="email" translatable="false">Email :</string>
    <string name="inform_me">Inform me of audits carried out</string>
    <string name="add_auditor">Add auditor</string>
    <string name="auditor">Auditor</string>
    <string name="rulesetInDroplistFormat" translatable="false">%s (V%d)</string>
    <string name="rulesetInDroplist_content_desc_downloaded">downloaded</string>
    <string name="rulesetInDroplist_content_desc_not_downloaded">to download</string>
    <string name="name_of_ref">Name of referential</string>
    <string name="type_of_ref">Referential type</string>
...
    <string name="cancel">Cancel</string>

    <string name="name_of_obj">Name of object</string>
    <string name="obj_sub_obj_dialog_tite">Indicate properties present in this element :</string>

    <!-- this is a contentDescription -->
    <string name="edit_path">Edit path</string>
    <string name="view_report">View report</string>


    <string name="search_rules">Show rules</string>
    <string name="comments">Comment (%d)</string>
    <string name="details">Details</string>
    <string name="properties">Properties (%d)</string>
    <string name="audit">Audit</string>
    <string name="test">Test</string>
    <string name="next">next</string>
    <string name="valider">validate</string>
    <string name="delete">delete</string>
    <string name="parcours" translatable="false">parcours</string>
    <string name="choice">Choice of Objects</string>
    <string name="object" translatable="false">Object</string>
    <string name="timer" translatable="false">%d:%d</string>
    <string name="speech_to_text">speech to text</string>
...
    <string name="voir_parcours">see route</string>
    <string name="referential_type" translatable="false">Référentiel : %s</string>
    <string name="auditorName">Auditor : %s</string>
    <string name="date" translatable="false">Date : %s</string>
    <string name="siteName" translatable="false">Site : %s</string>
    <string name="all_profiles">all the profiles</string>
    <string name="commentsCount">Comments (%d)</string>
    <string name="anamoliesCount" translatable="false">Anamolies (%d)</string>

    <!--    ************************************************************************************************************ -->

    <string-array name="terms_title_texts">
        <item>@string/terms_general_info_title_txt</item>
...
    <string name="choose_auditor_info">The selected name will be displayed in the audit report and associated with the signature.</string>
    <string name="choose_site_title">Choose site</string>
    <string name="search_name">Search</string>
    <!--    <string name="search_name">Search by name</string>-->

    <!--    home screen -->
    <string name="create_audit">Create audit</string>
    <string name="all_audits">All the audits</string>
    <string name="home_full_paragraph">The OCARA app is a real world accessibility self-diagnostic tool. It makes it possible to assess the accessibility of user journeys on a given site based on the audit standards available for download.\n\n An object encountered on the course is referenced and evaluated in relation to the proposed criteria, then commented on. The \"objects\" are for example a p
    <string name="home_part_paragraph">The OCARA app is a real world accessibility self-diagnostic tool. It makes it possible to assess the accessibility of user journeys on a given site …</string>


    <!--Edit audit screen-->
...
    <!--Create audit screen-->
    <string name="enter_audit_name">Audit Name</string>
    <string name="enter_site_name">Audit site</string>
    <string name="audit_referential">Referential Type</string>
    <string name="enter_auditor_name">Auditor name</string>
    <string name="referential_warring">This referential type needs to be downloaded.</string>
    <string name="download">Download</string>
    <string name="download_ref_dialog_title">Download Referential</string>
    <string name="download_ref_dialog_content">Are you sure you want to download Referential : %s</string>

    <string name="audit_auditor">Name and Surname : *</string>
    <string name="audit_expertise">Expertise level</string>
    <string name="novice">NOVICE</string>
    <string name="expert">EXPERT</string>
    <string name="create_the_audit">Create the audit</string>
    <!--    create site screen-->
    <string name="create_site_page_title">Add a site </string>
    <string name="mobile_create_site_name">Site name</string>
    <string name="mobile_create_site_address">Site address</string>
    <string name="mobile_create_site_code">Postal code</string>
...

    <string name="exp_info_expert_cont">\u2022 Assumes knowledge of accessibility rules
        \n\u2022 Aimed at a user accustomed to carrying out audits
        \n\u2022 All the rules are displayed on a single screen
    </string>
    <!--    content desc-->
    <string name="home_btn_content_desc">Navigate up</string>
    <string name="delete_content_desc">delete an element of the route</string>
    <string name="edit_content_desc">change order of objects of the route </string>
    <string name="content_desc_sort">Sort</string>
    <string name="content_desc_closed_audit">closed audit</string>
    <string name="content_desc_ong_audit">on going audit</string>
    <string name="content_desc_obj_selected">selected</string>
...
