...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/auditNameET"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/designMarginStart"
                android:layout_marginTop="@dimen/designMarginShort"
                android:layout_marginEnd="@dimen/designMarginEnd"
...
                app:layout_constraintStart_toEndOf="@+id/siteET"
                app:layout_constraintTop_toTopOf="@+id/siteTv"

                app:srcCompat="@drawable/ic_outline_info_24" />

            <ImageView
                android:id="@+id/selectSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/siteET"
...
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/referential_layout">

                <Spinner
                    android:id="@+id/referentialSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/dropdownListPreferredItemHeight"
                    android:clickable="false"
                    android:dropDownWidth="328dp"
                    android:popupElevation="8dp" />

...
                app:layout_constraintStart_toEndOf="@+id/auditorET"
                app:layout_constraintTop_toTopOf="@+id/auditorTV"

                app:srcCompat="@drawable/ic_outline_info_24" />

            <ImageView
                android:id="@+id/selectAuditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/auditorET"
...
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novice" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/expert_switch_button"
                    style="@style/RadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expert" />

            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_audit_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/designMarginStart"
                android:layout_marginTop="@dimen/designMarginLong"
                android:layout_marginEnd="@dimen/designMarginEnd"
                android:layout_marginBottom="@dimen/designMarginLong"
...
