...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/obj_name_tv"-->
<!--            style="@style/EditAuditHeaderFieldCell"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="32dp"-->
...
<!--            android:text="@string/name_of_obj"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/objects_grid"
            android:layout_width="0dp"
            android:background="@drawable/grey_curved_border_bg"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
...
